# secrets-manager

./: CHANGELOG.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: python-package.yml
src/pysecret/: __init__.py  __main__.py  api.py  cli.py  config.py  crypto.py  exceptions.py  manager.py  models.py  providers.py  secret_string.py  session.py  utils.py  validator.py
src/pysecret/storage/: base.py  keyring_backend.py  sqlite_backend.py
tests/: test_cli.py  test_crypto.py  test_keyring_backend.py  test_manager.py  test_providers.py  test_secret_string.py  test_sqlite_backend.py  test_validator.py
