[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "pysecret-ai"
version = "0.1.0"
description = "Local-first Python secrets manager for AI API keys"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PySecret-AI Contributors" }
]
license = { text = "MIT" }
keywords = ["secrets", "security", "llm", "api-key", "keyring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "cryptography>=42.0.0",
  "keyring>=25.0.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "platformdirs>=4.2.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
]

[project.scripts]
pysecret = "pysecret.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pysecret"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "src"
